MAs practicas, nGIf, ngFor, NgModel

--- a/src/app/empleados/empleados.component.html
+++ b/src/app/empleados/empleados.component.html
@@ -1,3 +1,4 @@
-<h1 style="text-align:center;">Empleados de la Empresa</h1>
+<h2 style="text-align:center;">Empleados de la Empresa</h2>
+<app-empleado></app-empleado>
 <app-empleado></app-empleado>
 <app-empleado></app-empleado>
