--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -344,6 +344,25 @@
     <span>{{ title }} se esta ejecutando!!</span>
   </div>
   <br />
-    <h6>Saludo: {{ saludo }}</h6>
+    <h1>Bienvenido al Panel de: {{ saludo }}</h1>
     <br />
+    <div>
+      <p>Nombre del Empleado: {{nombre}}</p>
+      <p>Edad: {{edad}} años</p>
+        <p *ngIf="edad >= 18; else menor">Es mayor de edad</p>
+        <ng-template #menor><p>Es un menor de edad.</p></ng-template>
+      <table border="1">
+        <tr>
+          <td>Sueldos</td>
+        </tr>
+        <tr *ngFor="let sueldo of sueldos">
+          <td>{{sueldo}}</td>
+        </tr>
+      </table>
+      <p>Los ultimos tres sueldos son: ${{ sueldos[0]}}.00, ${{ sueldos[1]}}.00, ${{ sueldos[2]}}.00</p>
+      <p>En los ultimos 3 meses ha ganado: ${{ultimos3Sueldos()}}.00</p>
+      <p>{{esActivo()}}</p>
+      <a href={{web}}>Accede al sitio del Empleado</a>
+    </div>
     <app-empleados></app-empleados>
+    <app-contador></app-contador>
