--- a/src/app/tabla/tabla.component.html
+++ b/src/app/tabla/tabla.component.html
@@ -15,7 +15,7 @@
             <td>{{e.descripcion}}</td>
             <td>{{e.precio}}</td>
             <td><button (click)="borrar(e.codigo)">Borrar</button></td>
-            <td><button>Seleccionar</button></td>
+            <td><button (click)="seleccionar(e.codigo)">Seleccionar</button></td>
         </tr>
     </tbody>
 </table>
@@ -26,6 +26,6 @@
     <p>Precio: <input type="number" [(ngModel)]="precio" /></p>
     <p>
         <button (click)="agregar()">Agregar</button>
-        <button>Modificar</button>
+        <button (click)="modificar()">Modificar</button>
     </p>
 </div>
