Se crea componente Dado y se reutiliza

--- a/src/app/contador/contador.component.html
+++ b/src/app/contador/contador.component.html
@@ -14,3 +14,9 @@
     <p>Ingrese apellido: <input type="text" [(ngModel)]="apellido"></p>
     <p>Nombre Completo: {{nombre}}, {{apellido}}</p>
 </div>
+
+<div style="text-align: center;">
+    <app-dado></app-dado>
+    <app-dado></app-dado>
+    <app-dado></app-dado>
+</div>
