--- a/src/app/tabla/tabla.component.html
+++ b/src/app/tabla/tabla.component.html
@@ -1,5 +1,5 @@
 <h3>Administracion de Articulos</h3>
-<table border="1">
+<table border="1" *ngIf="hayArticulos()">
     <thead>
         <tr>
             <th>Codigo</th>
