Se sube componente Dado Random @Input

--- a/src/app/contador/contador.component.html
+++ b/src/app/contador/contador.component.html
@@ -1,21 +1,22 @@
-<h3>Captura de Eevntos . Contador</h3>
-<p>{{contador}}</p>
-<button (click)="incrementar()">Incrementar</button>
-<button (click)="decrementar()">Decrementar</button>
-
-<hr>
-
-<h3>Ng Model</h3>
-<p>{{nombre}}</p>
-<input type="text" [(ngModel)]="nombre" />
-<div>
-    <h3>Lectura y Escritura de Datos</h3>
-    <p>Ingrese nombre: <input type="text" [(ngModel)]="nombre"></p>
-    <p>Ingrese apellido: <input type="text" [(ngModel)]="apellido"></p>
-    <p>Nombre Completo: {{nombre}}, {{apellido}}</p>
+<div class="container">
+    <h3>Contador</h3>
+    <span id="counter"></span>
+    <h1>{{contador}}</h1>
+  </div>
+<div class="bar">
+    <h3>Ng Model</h3>
+    <p>{{nombre}}</p>
+    <input type="text" [(ngModel)]="nombre" />
+    <div>
+        <h3>Lectura y Escritura de Datos</h3>
+        <p>Ingrese nombre: <input type="text" [(ngModel)]="nombre"></p>
+        <p>Ingrese apellido: <input type="text" [(ngModel)]="apellido"></p>
+        <p>Nombre Completo: {{nombre}}, {{apellido}}</p>
+    </div>
 </div>
 
 <div style="text-align: center;">
+    <h3>Dados Aleatorios</h3>
     <app-dado></app-dado>
     <app-dado></app-dado>
     <app-dado></app-dado>
