Juego de dados aleatorios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -367,3 +367,4 @@
     <app-empleados></app-empleados>
     <app-contador></app-contador>
     <app-tabla></app-tabla>
+    <app-app-dado></app-app-dado>
